docs: corrige documentação
